wzq-202406/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gm-tool-agent-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gm-tool-agent
  template:
    metadata:
      labels:
        app: gm-tool-agent
    spec:
      containers:
      - name: gm-tool-agent
        image: 8.130.49.219:5000/gm-tool-agent:latest # Replace with your image
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 21328
        volumeMounts:
        - name: config
          mountPath: /root/conf
      volumes:
      - name: config
        configMap:
          name: gm-tool-agent-config
---
apiVersion: v1
kind: Service
metadata:
  name: gm-tool-agent-service
spec:
  selector:
    app: gm-tool-agent
  ports:
    - protocol: TCP
      port: 21328
      targetPort: 21328
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gm-tool-ui-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gm-tool-ui
  template:
    metadata:
      labels:
        app: gm-tool-ui
    spec:
      containers:
      - name: gm-tool-ui
        image: 8.130.49.219:5000/gm-tool-ui:latest # Replace with your image
        imagePullPolicy: Always
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: gm-tool-ui-service
spec:
  selector:
    app: gm-tool-ui
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gm-tool-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gm-tool-ui-service
            port:
              number: 80
